# JackPlayer

app/: build.gradle
app/src/androidTest/java/com/gxa/jackplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  JackPlayer.cpp  JackPlayer.h  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  utils.h
app/src/main/java/com/gxa/jackplayer/: JackPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gxa/jackplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
